# treibholz

./: LICENSE  README.md  binnen_und_see.ipynb  pyproject.toml
notebooks/: binnen_und_see.ipynb
questions/: questions_binnen_basis.json  questions_binnen_segeln.json  questions_binnen_spezifisch.json  questions_see_basis.json  questions_see_spezifisch.json
