[project]
name = "treibholz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-cloud-texttospeech>=2.27.0",
    "jupyter>=1.1.1",
    "nbclassic>=1.3.1",
    "openai>=1.93.0",
    "trafilatura>=2.0.0",
]
